--- a/register-login.html
+++ b/register-login.html
@@ -126,7 +126,7 @@
 						    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
 						  </div>
 						  <div class="form-group">
-						    <label for="exampleInputPassword1">User Name: </label>
+						    <label for="exampleInputPassword1">Email: </label>
 						    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
 						  </div>
 						   <div class="form-group">
@@ -159,42 +159,144 @@
 			<div class="col-md-8">
 
 			<div class="card card-body bg-light">
-				<form>
-					<fieldset>
 
-				<h6><strong>Tell us about you and your business</strong></h6>
-				<hr>
-				<div class="row">
+				<form style="margin-top:30px;">
+				 <fieldset>
+
+			 <h6><strong>Basic</strong></h6>
+			 <hr>
+			 <div class="row">
+				<div class="col-md-6">
+					<div class="form-group">
+	 				 <label for="exampleInputEmail1">Customer name: </label>
+	 				 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+	 			 </div>
+				</div>
+				<div class="col-md-6">
+					<div class="form-group">
+	 				 <label for="exampleInputEmail1">Customer type: </label>
+	 				 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+	 			 </div>
+				</div>
+			</div>
+
+
+				 <div class="form-group">
+					 <label for="exampleInputEmail1">Street Address 1: </label>
+					 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+				 </div>
+				 <div class="form-group">
+					 <label for="exampleInputPassword1">Street Address 2: </label>
+					 <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+				 </div>
+				 <div class="row">
+					 <div class="col-md-6">
+						 <div class="form-group">
+							 <label for="exampleInputPassword1">  City: </label>
+							 <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+						 </div>
+					 </div>
+					 <div class="col-md-6">
+						 <div class="form-group">
+							 <label for="exampleInputPassword1">  State:</label>
+							 <select class="form-control" id="exampleFormControlSelect1">
+								 <option>option 1</option>
+								 <option>option 2</option>
+							 </select>
+						 </div>
+					 </div>
+				 </div>
+				 <div class="row">
 					<div class="col-md-6">
 						<div class="form-group">
-							<label for="exampleInputEmail1">First Name: </label>
-							<input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="form-group">
-							<label for="exampleInputPassword1">Last Name: </label>
+							<label for="exampleInputPassword1"> Zip: </label>
 							<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
 						</div>
 					</div>
+					<div class="col-md-6">
+						<div class="form-group">
+							<label for="exampleInputPassword1"> Country:</label>
+							<select class="form-control" id="exampleFormControlSelect1">
+								<option>option 1</option>
+								<option>option 2</option>
+							</select>
+						</div>
+					</div>
 				</div>
+				 <div class="row">
+					 <div class="col-md-6">
+						 <div class="form-group">
+							 <label for="exampleInputPassword1">  Phone: </label>
+							 <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+						 </div>
+					 </div>
+					 <div class="col-md-6">
+						 <div class="form-group">
+							 <label for="exampleInputPassword1">  Fax: </label>
+							 <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+						 </div>
+					 </div>
+				 </div>
+				 <div class="form-group">
+					 <label for="exampleInputPassword1">List ID: </label>
+					 <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+				 </div>
+			 </fieldset>
+		 </form>
 
-					<div class="form-group">
-						<label for="exampleInputPassword1">Email Address: </label>
-						<input type="email" class="form-control" id="exampleInputPassword1" placeholder="">
-					</div>
-					<div class="form-group">
-						<label for="exampleInputPassword1">Company Name: </label>
-						<input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
-					</div>
-					<div class="form-check">
-						<input type="checkbox" class="form-check-input" id="exampleCheck1">
-						<label class="form-check-label" for="exampleCheck1">I want to subcribe for News:</label>
-					</div>
-				</fieldset>
 
+		 <form style="margin-top:30px;">
+			 <fieldset>
 
-				</form>
+		 <h6> <strong>Billing address</strong></h6>
+		 <hr>
+		 <div class="form-group">
+			<label for="exampleInputEmail1">Billing name: </label>
+			<input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+		</div>
+		 <div class="form-group">
+			 <label for="exampleInputEmail1">Street Address 1: </label>
+			 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+		 </div>
+		 <div class="form-group">
+			 <label for="exampleInputPassword1">Street Address 2: </label>
+			 <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+		 </div>
+		 <div class="row">
+			 <div class="col-md-6">
+				 <div class="form-group">
+					 <label for="exampleInputPassword1">  City: </label>
+					 <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+				 </div>
+			 </div>
+			 <div class="col-md-6">
+				 <div class="form-group">
+					 <label for="exampleInputPassword1">  State:</label>
+					 <select class="form-control" id="exampleFormControlSelect1">
+						 <option>option 1</option>
+						 <option>option 2</option>
+					 </select>
+				 </div>
+			 </div>
+		 </div>
+		 <div class="row">
+			 <div class="col-md-6">
+				 <div class="form-group">
+					 <label for="exampleInputPassword1">  Zip: </label>
+					 <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+				 </div>
+			 </div>
+			 <div class="col-md-6">
+				 <div class="form-group">
+					 <label for="exampleInputPassword1">  Country: </label>
+					 <input type="text" class="form-control" id="exampleInputPassword1" placeholder="">
+				 </div>
+			 </div>
+		 </div>
+
+		 </fieldset>
+
+		 </form>
 
 
 
